test/test-frontend-iiif/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-iiif-ingress
  namespace: frontend-test-iiif
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "sectigo-acme-clusterissuer"
spec:
  rules:
  - host: test.iiif.library.ucla.edu
    http:
      paths:
      - path: /.*/manifest
        pathType: Prefix
        backend:
          service:
            name: external-fester
            port:
              number: 80
      - path: /fester.*
        pathType: Prefix
        backend:
          service:
            name: external-fester
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: external-cantaloupe
            port:
              number: 80
  tls:
    - hosts:
      - test.iiif.library.ucla.edu
      secretName: frontend-test-iiif-tls

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-auth-ingress
  namespace: frontend-test-iiif
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "sectigo-acme-clusterissuer"
spec:
  rules:
  - host: test.auth.iiif.library.ucla.edu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: external-test-hauth
            port:
              number: 80
  tls:
    - hosts:
      - test.auth.iiif.library.ucla.edu
      secretName: frontend-test-hauth-tls
